feat: 종류별 게시글 제목 API 리스트 작성